# kormarc.man

./: .gitignore  CHANGELOG.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  search_result_page.html  tailwind.config.ts  test_scraper_real.py  test_scraper_simple.py  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/workflows/: tag-validation.yml
__tests__/: page.test.tsx  setup.ts
app/: globals.css  page.tsx
app/lib/: api-client.ts  (+1 more)
coverage/: coverage-final.json  index.html  lcov.info
data/: KDC_VALIDATION_REPORT.md  kdc_100_classifications.yaml  kormarc_5000_stats.json  kormarc_prototype_100.db  kormarc_test_stats.json
docs/: API.md  API_INTEGRATION.md  API_WEB.md  ARCHITECTURE_FRONTEND.md  ARCHITECTURE_WEB.md  DATABASE_V2_MIGRATION.md  DB_V2_CHANGELOG.md  DB_V2_SUMMARY.md  EXAMPLES.md  FRONTEND_GUIDE.md  FRONTEND_TESTING.md  INDEX.md  KDC_100_CLASSIFICATIONS.md  NOWON_COMPLIANCE_VALIDATION_REPORT_100.md  NOWON_KORMARC_RULES.md  NOWON_VALIDATION_SUMMARY.md  SCRAPER_UPDATE_SUMMARY.md  TOON_SPEC.md  USAGE.md
frontend/: FRONTEND_IMPLEMENTATION.md  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
ref/: kormarc-fields.json
scripts/: build_test_db.py  collect_books.py  collect_prototype_100.py  db_schema.py  migrate_to_v2.py  rebuild_fts_index.py  scrape_isbns.py  scrape_real_data.py  validate_100_records.py  validate_nowon_compliance.py
tests/: manual_scraper_test.py  test_builder_debug.py  test_db_v2_search.py  test_kormarc_builder.py  test_toon_generator.py
(+152 files in other folders)
